project/k8s/httpd-with-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd-container
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: httpd-storage
          mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: httpd-storage
        persistentVolumeClaim:
          claimName: httpd-pvc
