project/k8s/mysql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: mysql
  name: mysql-pod
  labels:
    app: mysql
spec:
  containers:
    - name: mysql-pod
      image: mysql:5.6
      ports:
        - containerPort: 3306
