project/k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: default-http-24
  labels:
    app: httpd-24
spec:
  containers:
  - name: http-24
    image: httpd:2.4
    ports:
    - containerPort: 80
