project/k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  revisionHistoryLimit: 4
  paused: false
  replicas: 2
  minReadySeconds: 20
  selector:
    matchLabels:
      role: vote
    matchExpressions:
      - {key: version, operator: In, values: [v1, v2, v4]}
  template:
    metadata:
      name: vote
      labels:
        app: python
        role: vote
        version: v4
    spec:
      containers:
        - name: app
          image: c4clouds/vote:v1
          #Config Maps goes here
          resources:
            limits:
              cpu: "200m"
              memory: "250Mi"
            requests: 
              cpu: "100m"
              memory: "50Mi"
          ports:
            - containerPort: 80
              protocol: TCP
