project/k8s/httpd-php-service.yml
apiVersion: v1
kind: Service
metadata:
  #namespace: web
  name: httpd-php-pod-service
  labels:
    role: apache
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30003
  type: NodePort
