project/k8s/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-service
spec:
  type: LoadBalancer #NodePort
  selector:
    app: python
    role: vote
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      #nodePort: 30007
