project/k8s/from-httpd-php-web-to-mysql-pod-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-httpd-php
  namespace: mysql
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
             project: web
      - podSelector:
          matchLabels:
            app: apache
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: apache
